--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules/
 .history/
 app/css
 app/*.html
+app/html-dev/index.html
 
 # Allow index.html from build
-!app/.index.html
+!app/index.html
